--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,19 +15,7 @@ jobs:
         working-directory: 'backend/'
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.9.1'
-      - uses: abatilo/actions-poetry@v2.1.0
-      - name: Cache dependencies.
-        id: cache-deps
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies.
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: poetry install
+      - uses: ./.github/actions/setup-backend
       - name: Run tests.
         run: poetry run pytest --cov-report=xml --cov=. --cov-branch tests/
       - name: Upload coverage.
@@ -41,21 +29,7 @@ jobs:
         working-directory: 'backend/'
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.9.1'
-      - uses: abatilo/actions-poetry@v2.1.0
-        with:
-          poetry-version: 1.1.4
-      - name: Cache dependencies.
-        id: cache-deps
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies.
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: poetry install
+      - uses: ./.github/actions/setup-backend
       - name: Run type check.
         run: make typecheck
 
@@ -67,21 +41,7 @@ jobs:
         working-directory: 'backend/'
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.9.1'
-      - uses: abatilo/actions-poetry@v2.1.0
-        with:
-          poetry-version: 1.1.4
-      - name: Cache dependencies.
-        id: cache-deps
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies.
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: poetry install
+      - uses: ./.github/actions/setup-backend
       - name: Run lint check.
         run: make lintcheck
 
@@ -93,21 +53,7 @@ jobs:
         working-directory: 'backend/'
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.9.1'
-      - uses: abatilo/actions-poetry@v2.1.0
-        with:
-          poetry-version: 1.1.4
-      - name: Cache dependencies.
-        id: cache-deps
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies.
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: poetry install
+      - uses: ./.github/actions/setup-backend
       - name: Generate schema.
         run: make schema
       - name: Check for dirty files.
@@ -121,21 +67,7 @@ jobs:
         working-directory: 'backend/'
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.9.1'
-      - uses: abatilo/actions-poetry@v2.1.0
-        with:
-          poetry-version: 1.1.4
-      - name: Cache dependencies.
-        id: cache-deps
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies.
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: poetry install
+      - uses: ./.github/actions/setup-backend
       - name: Generate setupfiles.
         run: make setupfiles
       - name: Check for dirty files.
