--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -21,13 +21,13 @@ jobs:
       - uses: abatilo/actions-poetry@v2.1.0
         with:
           poetry-version: 1.1.4
-      - name: Cache dependencies
+      - name: Cache dependencies.
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies
+      - name: Install dependencies.
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Run tests
@@ -48,13 +48,13 @@ jobs:
       - uses: abatilo/actions-poetry@v2.1.0
         with:
           poetry-version: 1.1.4
-      - name: Cache dependencies
+      - name: Cache dependencies.
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies
+      - name: Install dependencies.
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Run type check
@@ -73,13 +73,13 @@ jobs:
       - uses: abatilo/actions-poetry@v2.1.0
         with:
           poetry-version: 1.1.4
-      - name: Cache dependencies
+      - name: Cache dependencies.
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies
+      - name: Install dependencies.
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Run lint check
@@ -98,17 +98,17 @@ jobs:
       - uses: abatilo/actions-poetry@v2.1.0
         with:
           poetry-version: 1.1.4
-      - name: Cache dependencies
+      - name: Cache dependencies.
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies
+      - name: Install dependencies.
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Generate schema
-        run: make schema
+        run: DATA_PATH=../data make schema
       - name: Diff
         run: git diff
       - name: Compare
@@ -127,13 +127,13 @@ jobs:
       - uses: abatilo/actions-poetry@v2.1.0
         with:
           poetry-version: 1.1.4
-      - name: Cache dependencies
+      - name: Cache dependencies.
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies
+      - name: Install dependencies.
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Generate setup files
