--- a/.github/src/backend.yml
+++ b/.github/src/backend.yml
@@ -41,13 +41,13 @@ jobs:
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
       - name: Configure PATH
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-      - name: Cache dependencies.
+      - name: Cache dependencies
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: {{ "${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}" }}
-      - name: Install dependencie
+      - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       {% for step in job.steps %}
