--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -40,13 +40,13 @@ jobs:
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
       - name: Configure PATH
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-      - name: Cache dependencies.
+      - name: Cache dependencies
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencie
+      - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Run tests
@@ -86,13 +86,13 @@ jobs:
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
       - name: Configure PATH
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-      - name: Cache dependencies.
+      - name: Cache dependencies
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencie
+      - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Run type check
@@ -130,13 +130,13 @@ jobs:
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
       - name: Configure PATH
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-      - name: Cache dependencies.
+      - name: Cache dependencies
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencie
+      - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Run lint check
@@ -174,13 +174,13 @@ jobs:
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
       - name: Configure PATH
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-      - name: Cache dependencies.
+      - name: Cache dependencies
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencie
+      - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Generate schema
@@ -222,13 +222,13 @@ jobs:
         run: curl -sSl -vvv https://raw.githubusercontent.com/python-poetry/poetry/1.1.4/get-poetry.py | python -
       - name: Configure PATH
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-      - name: Cache dependencies.
+      - name: Cache dependencies
         id: cache-deps
         uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencie
+      - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: poetry install
       - name: Generate setup files
